--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div id="app">
-      <h1>...Snake 🐍</h1>
+      <div class="content">
+        <h1>...Snake 🐍</h1>
+        <button class="start">Start</button>
+        <button class="stop">Stop</button>
+      </div>
       <div class="border">
         <canvas id="game" width="400" height="400"></canvas>
       </div>
